making styles changes

--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
                                         </div>
                                         <div class="card-back-text">
                                             <div class="back-top">
-                                                <span class="name">Miami, Florida</span>
+                                                <span class="name">New York</span>
                                                 <h5 class="frace">Treat yoursel to a VIP ice cream party at MadLab</h5>
                                             </div>
                                             <div class="back-bottom">
-                                                <span class="name">Miami, Florida</span>
+                                                <span class="name">New York</span>
                                                 <h5 class="frace">Take a private curated tour of the Rubell Museum</h5>
                                             </div>
                                         </div>
@@ -140,7 +140,7 @@
                                             </div>
                                             <div class="back-bottom">
                                                 <span class="name">Estados Unidos</span>
-                                                <h5 class="frace">Mandarin Oriental, Miami</h5>
+                                                <h5 class="frace">Mandarin Oriental, New York</h5>
                                             </div>
                                         </div>
                                     </div>
@@ -210,7 +210,7 @@
                                             <div class="card-icon"><img src="img/map.png" alt=""></div>
                                             <div class="card-title">Priceless<br>Cities</div>
                                             <div class="card-text">Disfruta experiencias exclusivas
-                                                en New York.</div>
+                                                en Miami.</div>
                                         </div>
                                         <div class="card-back-text">
                                             <div class="back-top">
@@ -232,7 +232,7 @@
                                             <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
                                             <div class="card-title">Mastercard protectioner<br>
                                                 Rewards</div>
-                                            <div class="card-text">Recibe rembolsos automáticos por tus compras en New York.</div>
+                                            <div class="card-text">Recibe rembolsos automáticos por tus compras en Miami.</div>
                                         </div>
                                         <div class="card-back-text">
                                             <div class="back-top">
@@ -253,7 +253,7 @@
                                         <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/pin.png" alt=""></div>
                                             <div class="card-title">Loungekey<br></div>
-                                            <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
+                                            <div class="card-text">Viaja siempre al mejor estilo VIP en Miami.</div>
                                         </div>
                                         <div class="card-back-text">
                                             <div class="back-top last">
@@ -304,7 +304,7 @@
                                             <div class="card-icon"><img src="img/map.png" alt=""></div>
                                             <div class="card-title">Priceless<br>Cities</div>
                                             <div class="card-text">Disfruta experiencias exclusivas
-                                                en New York.</div>
+                                                en Madrid.</div>
                                         </div>
                                         <div class="card-back-text">
                                             <div class="back-top">
@@ -348,11 +348,11 @@
                                         <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/pin.png" alt=""></div>
                                             <div class="card-title">Loungekey<br></div>
-                                            <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
+                                            <div class="card-text">Viaja siempre al mejor estilo VIP en Madrid.</div>
                                         </div>
                                         <div class="card-back-text">
                                             <div class="back-top last">
-                                                <span class="name">Estados Unidos</span>
+                                                <span class="name">España</span>
                                                 <h5 class="frace">Terminal 1</h5>
                                                 <div class="furnature">
                                                     <img src="img/furnature.png" alt="">
@@ -360,7 +360,7 @@
                                                 </div>
                                             </div>
                                             <div class="back-bottom last">
-                                                <span class="name">Estados Unidos</span>
+                                                <span class="name">España</span>
                                                 <h5 class="frace">Terminal 2</h5>
                                                 <div class="furnature">
                                                     <img src="img/furnature.png" alt="">
@@ -399,7 +399,7 @@
                                             <div class="card-icon"><img src="img/map.png" alt=""></div>
                                             <div class="card-title">Priceless<br>Cities</div>
                                             <div class="card-text">Disfruta experiencias exclusivas
-                                                en New York.</div>
+                                                en Otras Ciudades.</div>
                                         </div>
                                         <div class="card-back-text">
                                             <div class="back-top">
@@ -421,7 +421,7 @@
                                             <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
                                             <div class="card-title">Mastercard Traveler<br>
                                                 Rewards</div>
-                                            <div class="card-text">Recibe rembolsos automáticos por tus compras en New York.</div>
+                                            <div class="card-text">Recibe rembolsos automáticos por tus compras en otras ciudades.</div>
                                         </div>
                                         <div class="card-back-text">
                                             <div class="back-top">
@@ -442,7 +442,7 @@
                                         <div class="card-front-text d-none d-lg-block">
                                             <div class="card-icon"><img src="img/pin.png" alt=""></div>
                                             <div class="card-title">Loungekey<br></div>
-                                            <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
+                                            <div class="card-text">Viaja siempre al mejor estilo VIP en otras ciudades.</div>
                                         </div>
                                         <div class="card-back-text">
                                             <div class="back-top last">
