adding links to slider's cards

--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
                                         <div class="card-back-text">
                                             <div class="back-top">
                                                 <span class="name">New York</span>
-                                                <h5 class="frace">Treat yoursel to a VIP ice cream party at MadLab</h5>
+                                                <h5 class="frace"><a href="https://www.priceless.com" target="_blank">Treat yoursel to a VIP ice cream party at MadLab</a></h5>
                                             </div>
                                             <div class="back-bottom">
                                                 <span class="name">New York</span>
-                                                <h5 class="frace">Take a private curated tour of the Rubell Museum</h5>
+                                                <h5 class="frace"><a href="https://www.priceless.com" target="_blank">Take a private curated tour of the Rubell Museum</a></h5>
                                             </div>
                                         </div>
                                     </div>
@@ -135,12 +135,13 @@
                                         </div>
                                         <div class="card-back-text">
                                             <div class="back-top">
-                                                <span class="name">Estados Unidos</span>
-                                                <h5 class="frace">Bergdorf Goodman</h5>
+                                                    <span class="name">Estados Unidos</span>
+                                                    <h5 class="frace"><a href="https://mtr.mastercardservices.com/en"  target="_blank">Bergdorf Goodman</a></h5>
                                             </div>
                                             <div class="back-bottom">
-                                                <span class="name">Estados Unidos</span>
-                                                <h5 class="frace">Mandarin Oriental, New York</h5>
+                                                    <span class="name">Estados Unidos</span>
+                                                    <h5 class="frace"><a href="https://mtr.mastercardservices.com/en" target="_blank">Mandarin Oriental, New York</a></h5>
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
@@ -160,7 +161,7 @@
                                                 <h5 class="frace">Central Terminal<br>Concourse E</h5>
                                                 <div class="furnature">
                                                     <img src="img/furnature.png" alt="">
-                                                    <span class="room">Lounges</span>
+                                                    <span class="room"><a href="https://airport.mastercard.com" target="_blank">Lounges</a></span>
                                                 </div>
                                             </div>
                                             <div class="back-bottom last">
@@ -168,7 +169,7 @@
                                                 <h5 class="frace">Central Terminal<br>Concourse F</h5>
                                                 <div class="furnature">
                                                     <img src="img/furnature.png" alt="">
-                                                    <span class="room">Lounges</span>
+                                                    <span class="room"><a href="https://airport.mastercard.com" target="_blank">Lounges</a></span>
                                                 </div>
                                             </div>
                                         </div>
@@ -215,11 +216,11 @@
                                         <div class="card-back-text">
                                             <div class="back-top">
                                                 <span class="name">Miami, Florida</span>
-                                                <h5 class="frace">Treat yoursel to a VIP ice cream party at MadLab</h5>
+                                                <h5 class="frace"><a href="https://www.priceless.com" target="_blank">Treat yoursel to a VIP ice cream party at MadLab</a></h5>
                                             </div>
                                             <div class="back-bottom">
                                                 <span class="name">Miami, Florida</span>
-                                                <h5 class="frace">Take a private curated tour of the Rubell Museum</h5>
+                                                <h5 class="frace"><a href="https://www.priceless.com" target="_blank">Take a private curated tour of the Rubell Museum</a></h5>
                                             </div>
                                         </div>
                                     </div>
@@ -237,11 +238,11 @@
                                         <div class="card-back-text">
                                             <div class="back-top">
                                                 <span class="name">Miami, Florida</span>
-                                                <h5 class="frace">Treat yoursel to a VIP ice cream party at MadLab</h5>
+                                                <h5 class="frace"><a href="https://mtr.mastercardservices.com/en" target="_blank"> Bergdorf Goodman</a></h5>
                                             </div>
                                             <div class="back-bottom">
                                                 <span class="name">Miami, Florida</span>
-                                                <h5 class="frace">Take a private curated tour of the Rubell Museum</h5>
+                                                <h5 class="frace"><a href="https://mtr.mastercardservices.com/en" target="_blank">Mandarin Oriental, Miami</a></h5>
                                             </div>
                                         </div>
                                     </div>
@@ -261,7 +262,7 @@
                                                 <h5 class="frace">Central Terminal<br>Concourse E</h5>
                                                 <div class="furnature">
                                                     <img src="img/furnature.png" alt="">
-                                                    <span class="room">Lounges</span>
+                                                    <span class="room"><a href="https://airport.mastercard.com" target="_blank">Lounges</a></span>
                                                 </div>
                                             </div>
                                             <div class="back-bottom last">
@@ -269,7 +270,7 @@
                                                 <h5 class="frace">Central Terminal<br>Concourse F</h5>
                                                 <div class="furnature">
                                                     <img src="img/furnature.png" alt="">
-                                                    <span class="room">Lounges</span>
+                                                    <span class="room"><a href="https://airport.mastercard.com" target="_blank">Lounges</a></span>
                                                 </div>
                                             </div>
                                         </div>
@@ -309,11 +310,11 @@
                                         <div class="card-back-text">
                                             <div class="back-top">
                                                 <span class="name">Madrid, España</span>
-                                                <h5 class="frace">Hotel Week</h5>
+                                                <h5 class="frace"><a href="https://www.priceless.com" target="_blank">Hotel Week</a></h5>
                                             </div>
                                             <div class="back-bottom">
                                                 <span class="name">Madrid, España</span>
-                                                <h5 class="frace">Asociación de Amigos de la Repostería</h5>
+                                                <h5 class="frace"><a href="https://www.priceless.com" target="_blank">Asociación de Amigos de la Repostería</a></h5>
                                             </div>
                                         </div>
                                     </div>
@@ -331,12 +332,12 @@
                                         <div class="card-back-text">
                                             <div class="back-top">
                                                 <span class="name">Madrid, España</span>
-                                                <h5 class="frace">As one of the most important luxury women´s fashion</h5>
+                                                <h5 class="frace"><a href="https://mtr.mastercardservices.com/en" target="_blank">As one of the most important luxury women´s fashion</a></h5>
                                             </div>
                                             <div class="back-bottom">
                                                 <span class="name">Madrid, España</span>
-                                                <h5 class="frace">The exclusive Heritage
-                                                    Madrid Hotel </h5>
+                                                <h5 class="frace"><a href="https://mtr.mastercardservices.com/en" target="_blank">The exclusive Heritage
+                                                    Madrid Hotel </a></h5>
                                             </div>
                                         </div>
                                     </div>
@@ -356,7 +357,7 @@
                                                 <h5 class="frace">Terminal 1</h5>
                                                 <div class="furnature">
                                                     <img src="img/furnature.png" alt="">
-                                                    <span class="room">Lounges</span>
+                                                    <span class="room"><a href="https://airport.mastercard.com" target="_blank">Lounges</a></span>
                                                 </div>
                                             </div>
                                             <div class="back-bottom last">
@@ -364,7 +365,7 @@
                                                 <h5 class="frace">Terminal 2</h5>
                                                 <div class="furnature">
                                                     <img src="img/furnature.png" alt="">
-                                                    <span class="room">Lounges</span>
+                                                    <span class="room"><a href="https://airport.mastercard.com" target="_blank">Lounges</a></span>
                                                 </div>
                                             </div>
                                         </div>
@@ -404,11 +405,11 @@
                                         <div class="card-back-text">
                                             <div class="back-top">
                                                 <span class="name">París Francia</span>
-                                                <h5 class="frace">Le Fooding</h5>
+                                                <h5 class="frace"><a href="https://www.priceless.com" target="_blank">Le Fooding</a></h5>
                                             </div>
                                             <div class="back-bottom">
                                                 <span class="name">Roma, Italia</span>
-                                                <h5 class="frace">Local Aromas</h5>
+                                                <h5 class="frace"><a href="https://www.priceless.com" target="_blank">Local Aromas</a></h5>
                                             </div>
                                         </div>
                                     </div>
@@ -426,11 +427,11 @@
                                         <div class="card-back-text">
                                             <div class="back-top">
                                                 <span class="name">París, Francia</span>
-                                                <h5 class="frace">Fauchon Grand Café</h5>
+                                                <h5 class="frace"><a href="https://mtr.mastercardservices.com/en" target="_blank">Fauchon Grand Café</a></h5>
                                             </div>
                                             <div class="back-bottom">
                                                 <span class="name">Roma, Italia</span>
-                                                <h5 class="frace">Hotel de la Ville, Rome</h5>
+                                                <h5 class="frace"><a href="https://mtr.mastercardservices.com/en" target="_blank">Hotel de la Ville, Rome</a></h5>
                                             </div>
                                         </div>
                                     </div>
@@ -450,7 +451,7 @@
                                                 <h5 class="frace">Terminal 1</h5>
                                                 <div class="furnature">
                                                     <img src="img/furnature.png" alt="">
-                                                    <span class="room">Lounges</span>
+                                                    <span class="room"><a href="https://airport.mastercard.com" target="_blank">Lounges</a></span>
                                                 </div>
                                             </div>
                                             <div class="back-bottom last">
@@ -458,7 +459,7 @@
                                                 <h5 class="frace">Terminal 2E</h5>
                                                 <div class="furnature">
                                                     <img src="img/furnature.png" alt="">
-                                                    <span class="room">Lounges</span>
+                                                    <span class="room"><a href="https://airport.mastercard.com" target="_blank">Lounges</a></span>
                                                 </div>
                                             </div>
                                         </div>
