adding active class to menu

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="col-9">
                     <nav class="main-header--nav-menu d-none d-md-flex">
                         <ul>
-                            <li class="main-heder--nav-menu__item"><a href="#home">Home</a></li>
+                            <li class="main-heder--nav-menu__item"><a href="#home" class="active">Home</a></li>
                             <li class="main-heder--nav-menu__item"><a href="#travel">+ Viajes</a></li>
                             <li class="main-heder--nav-menu__item"><a href="#services">+ Servicios VIP</a></li>
                             <li class="main-heder--nav-menu__item"><a href="#protection">+ Protecciones</a></li>
