adding collapsable panels to nefits

--- a/index.html
+++ b/index.html
@@ -870,14 +870,20 @@ Alertas de Consumo Entérate al instante de tus movimientos, controla mejor tus 
                     <div class="row">
                         <div class="col-3">
                             <div class="benefits-panel--icon">
-                                <img src="img/world.png" alt="">
+                                <img src="img/stars.png" alt="">
                             </div>
                         </div>
                         <div class="col-9">
                             <div class="benefits-panel--info">
                                 <h4 class="benefits-panel--info__title">Estrellas BHD León.</h4>
-                                <h5 class="benefits-panel--info__text">Proporciona asistencia durante emergencias relacionada con la tarjeta en cualquier momento, desde cualquier lugar, por medio de una llamada telefónica gratuita.
-                                </h5>
+                                <div class="collapse" id="leon-stars">
+                                    <span>
+                                        Proporciona asistencia durante emergencias relacionada con la tarjeta en cualquier momento, desde cualquier lugar, por medio de una llamada telefónica gratuita.
+                                    </span>
+                                </div>
+                                <button type="button" data-bs-toggle="collapse" data-bs-target="#leon-stars" aria-expanded="false" aria-controls="collapseExample">
+                                    <img src="img/up-arrow.png" alt="">
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -890,14 +896,21 @@ Alertas de Consumo Entérate al instante de tus movimientos, controla mejor tus 
                     <div class="row">
                         <div class="col-3">
                             <div class="benefits-panel--icon">
-                                <img src="img/hand.png" alt="">
+                                <img src="img/cuotas.png" alt="">
                             </div>
                         </div>
                         <div class="col-9">
                             <div class="benefits-panel--info">
                                 <h4 class="benefits-panel--info__title">Cuotas BHD León.</h4>
-                                <h5 class="benefits-panel--info__text">Es la línea de crédito adicional de tu tarjeta principal, que funciona con un límite independiente para que puedas realizar compras pagando directamente en el comercio de tu preferencia. Con tus Tarjetas de Crédito BHD León puedes pagar tus consumos en la cantidad de cuotas que quieras. Desde adquirir un elec-trodoméstico, comprar ropa o tus vacaciones soñadas hasta cubrir los gastos escolares de tus hijos. Conoce más aquí.
-                                    <br>*Este beneficio solo aplica para las Tarjetas BHD León Mastercard Black.</h5>
+                                <div class="collapse" id="cuotas-leon">
+                                    <span>
+                                        Es la línea de crédito adicional de tu tarjeta principal, que funciona con un límite independiente para que puedas realizar compras pagando directamente en el comercio de tu preferencia. Con tus Tarjetas de Crédito BHD León puedes pagar tus consumos en la cantidad de cuotas que quieras. Desde adquirir un elec-trodoméstico, comprar ropa o tus vacaciones soñadas hasta cubrir los gastos escolares de tus hijos. Conoce más aquí.
+                                    <br>*Este beneficio solo aplica para las Tarjetas BHD León Mastercard Black.
+                                    </span>
+                                </div>
+                                <button type="button" data-bs-toggle="collapse" data-bs-target="#cuotas-leon" aria-expanded="false" aria-controls="collapseExample">
+                                    <img src="img/up-arrow-white.png" alt="">
+                                </button>
                             </div>
                         </div>
                     </div>
