mobile cards scroll animation

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner flip-effect">
-                                        <div class="card-front-text d-none d-lg-block">
+                                        <div class="card-front-text">
                                             <div class="card-icon"><img src="img/map.png" alt=""></div>
                                             <div class="card-title">Priceless<br>Cities</div>
                                             <div class="card-text">Disfruta experiencias exclusivas
@@ -128,7 +128,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner flip-effect">
-                                        <div class="card-front-text d-none d-lg-block">
+                                        <div class="card-front-text">
                                             <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
                                             <div class="card-title">Mastercard protectioner<br>
                                                 Rewards</div>
@@ -151,7 +151,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner flip-effect">
-                                        <div class="card-front-text d-none d-lg-block">
+                                        <div class="card-front-text">
                                             <div class="card-icon"><img src="img/pin.png" alt=""></div>
                                             <div class="card-title">Loungekey<br></div>
                                             <div class="card-text">Viaja siempre al mejor estilo VIP en New York.</div>
@@ -208,7 +208,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner flip-effect">
-                                        <div class="card-front-text d-none d-lg-block">
+                                        <div class="card-front-text">
                                             <div class="card-icon"><img src="img/map.png" alt=""></div>
                                             <div class="card-title">Priceless<br>Cities</div>
                                             <div class="card-text">Disfruta experiencias exclusivas
@@ -230,7 +230,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner flip-effect">
-                                        <div class="card-front-text d-none d-lg-block">
+                                        <div class="card-front-text">
                                             <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
                                             <div class="card-title">Mastercard protectioner<br>
                                                 Rewards</div>
@@ -252,7 +252,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner flip-effect">
-                                        <div class="card-front-text d-none d-lg-block">
+                                        <div class="card-front-text">
                                             <div class="card-icon"><img src="img/pin.png" alt=""></div>
                                             <div class="card-title">Loungekey<br></div>
                                             <div class="card-text">Viaja siempre al mejor estilo VIP en Miami.</div>
@@ -302,7 +302,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner flip-effect">
-                                        <div class="card-front-text d-none d-lg-block">
+                                        <div class="card-front-text">
                                             <div class="card-icon"><img src="img/map.png" alt=""></div>
                                             <div class="card-title">Priceless<br>Cities</div>
                                             <div class="card-text">Disfruta experiencias exclusivas
@@ -324,7 +324,7 @@
                             <div class="col-12 col-md-4">
                                 <div class="cities-slider--city--bottom__card">
                                     <div class="card-inner flip-effect">
-                                        <div class="card-front-text d-none d-lg-block">
+                                        <div class="card-front-text">
                                             <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
                                             <div class="card-title">Mastercard Traveler<br>
                                                 Rewards</div>
@@ -484,10 +484,10 @@
                     </div>
                 </div>
                 <div class="bottom-text--img  d-block d-md-none">
-                    <img id="card1"src="img/tarjetas4.png" alt="" class="animate__animated animate__slideInLeft">
-                        <img id="card2"src="img/tarjetas3.png" alt="" class="animate__animated animate__slideInLeft">
-                        <img id="card3"src="img/tarjetas2.png" alt="" class="animate__animated animate__slideInLeft">
-                        <img id="card4"src="img/tarjetas1.png" alt="" class="animate__animated animate__slideInLeft">
+                    <img id="card1"src="img/tarjetas4.png" alt="" class="animate__animated">
+                    <img id="card2"src="img/tarjetas3.png" alt="" class="animate__animated">
+                    <img id="card3"src="img/tarjetas2.png" alt="" class="animate__animated">
+                    <img id="card4"src="img/tarjetas1.png" alt="" class="animate__animated">
                 </div>
             </div>
         </div>
