--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                                             <div class="card-icon"><img src="img/suitcase.png" alt=""></div>
                                             <div class="card-title">Mastercard Traveler<br>
                                                 Rewards</div>
-                                            <div class="card-text">Recibe rembolsos automáticos por tus compras en New York.</div>
+                                            <div class="card-text">Recibe rembolsos automáticos por tus compras en Madrid.</div>
                                         </div>
                                         <div class="card-back-text">
                                             <div class="back-top">
